@startuml
class Car

abstract class CarBuilder {
  + setModel(model: String): CarBuilder
  + setEngine(engine: String, horsepower: int): CarBuilder
  + setSeats(seats: int): CarBuilder
  + setTransmission(transmission: String): CarBuilder
  + setColor(color: String): CarBuilder
  + addFeature(feature: String): CarBuilder
  + build(): Car
}

class PassengerCarBuilder
class SportsCarBuilder

class CarDirector {
  + buildFamilyCar(builder: CarBuilder): Car
  + buildSportsCar(builder: CarBuilder): Car
}

class Main

CarBuilder <|-- PassengerCarBuilder
CarBuilder <|-- SportsCarBuilder
CarBuilder ..> Car : creates
CarDirector --> CarBuilder : uses
Main --> CarDirector : uses
@enduml
